src/test/ui/malformed/malformed-unwind-2.stderr
error[E0633]: malformed `#[unwind]` attribute
  --> $DIR/malformed-unwind-2.rs:3:1
   |
LL | #[unwind(allowed, aborts)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0633]: malformed `#[unwind]` attribute
  --> $DIR/malformed-unwind-2.rs:7:1
   |
LL | #[unwind(unsupported)]
   | ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0633`.
